xterm (251-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Sat, 21 Nov 2009 14:51:13 +0100

xterm (250-1) unstable; urgency=low

  * New upstream release
    + add check and error-message for fonts that have no printable values in
      the ISO-8859-1 range (closes: #542434)
    + limit minimum cell-width for packed font to maximum-advance
      reported by Xft.  Some fonts are wider than that, even in the Latin-1
      range (closes: #550497)
    + correct off-by-one in okPosition fix from patch #249 limit-checks which
      prevented double-click selection on the bottom line of the screen
      (closes: #550368)
    + document in xterm manpage the limited availability of resources color16
      to color255 as noted in patch #188 (LP: #438850)

 -- Julien Cristau <jcristau@debian.org>  Tue, 13 Oct 2009 20:20:08 +0200

xterm (249-1) unstable; urgency=low

  * New upstream release.
    + add limit-checks for result of visual_width() function, needed from
      patch #242 and exposed by #244 changes (closes: #548321).
  * Upstream changed the default of AllowWindowOps to false, remove patch
    903_windowops.diff.
  * Use the upstream default for pointerMode; drop patch
    902_pointermode_never.diff.

 -- Julien Cristau <jcristau@debian.org>  Sun, 04 Oct 2009 15:40:16 +0200

xterm (248-1) unstable; urgency=low

  * New upstream release
    + correct logic used to improve performance of missing-glyph check, which
      did not handle line-drawing characters (closes: #545220)

 -- Julien Cristau <jcristau@debian.org>  Wed, 16 Sep 2009 15:53:07 +0200

xterm (247-1) unstable; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.8.3.
  * Remove David Martínez Moreno from Uploaders as he hasn't been active on
    this package lately.
  * Kill remaining subversion $Id$ tags from debian packaging files.
  * Use libutempter, remove setgid bit from the xterm binary (closes: #537867).
