@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
  *****************************************************************************
  * Copyright 1997-2007,2009 by Thomas E. Dickey                              *
@@ -20,7 +20,7 @@
  * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF   *
  * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.            *
  *****************************************************************************
-  $XTermId: xterm.faq.html,v 1.105 2009/01/11 01:27:40 tom Exp $
+  $XTermId: xterm.faq.html,v 1.107 2009/11/11 11:59:38 tom Exp $
   -->
 <HTML>
 <HEAD>
@@ -2539,6 +2539,19 @@ Here are copies of the file in various forms:
 <a href="http://invisible-island.net/xterm/ctlseqs/ctlseqs.html">html</a>,
 <a href="http://invisible-island.net/xterm/ctlseqs/ctlseqs.pdf">pdf</a> and
 <a href="http://invisible-island.net/xterm/ctlseqs/ctlseqs.txt">text</a>.
+
+<h2><a name="resize_man">resize &ndash; et TERMCAP and terminal settings to current xterm window size</a></h2>
+<em>resize</em> is useful by itself, but is maintained for historical
+reasons as part of xterm.
+<a href="http://invisible-island.net/xterm/manpage/resize.html">html</a>,
+<a href="http://invisible-island.net/xterm/manpage/resize.pdf">pdf</a> and
+<a href="http://invisible-island.net/xterm/manpage/resize.txt">text</a>.
+
+<h2><a name="luit_prog">luit - Locale and ISO 2022 support for Unicode terminals</a></h2>
+<a href="../luit/luit.html">luit</a> also is maintained as part of xterm,
+since its upstream maintainer is inactive,
+and the ostensible maintainers have more than once delivered unusable versions,
+causing many bug reports to be issued against xterm.
 
 <H1><A NAME="future_work">Ongoing/future work</A></H1>
 <UL>
