@@ -1,6 +1,7 @@
 xterm (251-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Update copy of XTerm FAQ to revision 1.107 (dated 2009/11/11).
 
  -- Julien Cristau <jcristau@debian.org>  Sat, 21 Nov 2009 14:51:13 +0100
 
